--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -42,6 +42,12 @@ body, html {
   gap: 2rem;
 }
 
+.navigation-menu.centered-nav {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .nav-link {
   text-decoration: none;
   color: #333;
