--- a/src/views/ide.ejs
+++ b/src/views/ide.ejs
@@ -1,5 +1,4 @@
-<!DOCT  <link rel="stylesheet" href="/stylesheets/ide.css">
-  <link rel="stylesheet" href="/stylesheets/ide-additional.css">PE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
