--- a/src/views/loginregister.ejs
+++ b/src/views/loginregister.ejs
@@ -84,19 +84,12 @@
                 <input type="email" class="form-input" id="registerEmail" placeholder="Enter your email" required>
               </div>
               <div class="form-group">
-                <label class="form-labuth-Password</label>
+                <label class="form-label">Password</label>
                 <input type="password" class="form-input" id="registerPassword" placeholder="Create a password" required>
               </div>
               <div class="form-group">
                 <label class="form-label">Confirm Password</label>
                 <input type="password" class="form-input" id="confirmPassword" placeholder="Confirm your password" required>
-              </div>
-              <div class="form-group">
-                <label class="form-label">Role</label>
-                <select class="form-input" id="userRole">
-                  <option value="student">Student</option>
-                  <option value="instructor">Instructor</option>
-                </select>
               </div>
               <div class="form-options">
                 <label class="checkbox-label">
