Fixed username display in user-dashboard

--- a/src/views/loginregister.ejs
+++ b/src/views/loginregister.ejs
@@ -108,6 +108,10 @@
                 </div>
               </div>
               <div class="form-group">
+                <label class="form-label">Role</label>
+                <select class="form-input" id="userRole">
+                  <option value="student">Student</option>
+                  <option value="instructor">Instructor</option>
                 </select>
               </div>
               <div class="form-options">
