request hosting changes

--- a/public/stylesheets/requestExam.css
+++ b/public/stylesheets/requestExam.css
@@ -41,6 +41,9 @@ body, html {
 .navigation-menu {
     display: flex;
     gap: 2rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .nav-link {
